--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SolPay - Solana Token Transfer & Fiat Bridge</title>
+    <title>NaijaPay - Naira Token Transfer & Fiat Bridge Using Solana Devnet</title>
     <meta name="description" content="Send and receive tokens on Solana Devnet with mock naira deposit and withdrawal functionality" />
-    <meta name="author" content="SolPay" />
+    <meta name="author" content="NaijaPay" />
 
-    <meta property="og:title" content="SolPay - Solana Token Transfer & Fiat Bridge" />
+    <meta property="og:title" content="NaijaPay - Naira Token Transfer & Fiat Bridge Using Solana Devnet" />
     <meta property="og:description" content="Send and receive tokens on Solana Devnet with mock naira deposit and withdrawal functionality" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://ogcdn.net/3ec76cee-f41d-4f9d-a8a3-1883afafff1b/v1/og.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@NaijaPay" />
+    <meta name="twitter:image" content="https://ogcdn.net/3ec76cee-f41d-4f9d-a8a3-1883afafff1b/v1/og.png" />
   </head>
 
   <body>
